[gd_scene load_steps=4 format=3 uid="uid://c1jr6832fcx3u"]

[ext_resource type="Script" uid="uid://d2plhteb46jg4" path="res://scripts/dialog_balloon.gd" id="1_3qbox"]
[ext_resource type="Texture2D" uid="uid://dqeijn2kmubjr" path="res://assets/dialog_balloon.png" id="1_165cp"]
[ext_resource type="FontFile" uid="uid://cifa1pryng2s2" path="res://assets/fonts/minecraft/Minecraft.ttf" id="3_v5hwa"]

[node name="DialogBox" type="MarginContainer"]
offset_right = 56.0
offset_bottom = 56.0
script = ExtResource("1_3qbox")

[node name="DialogBackground" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_165cp")
region_rect = Rect2(-0.25385284, -0.33613968, 32.209213, 32.42684)
patch_margin_left = 28
patch_margin_top = 28
patch_margin_right = 28
patch_margin_bottom = 28

[node name="DialogLabelMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogLabel" type="Label" parent="DialogLabelMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_v5hwa")
theme_override_font_sizes/font_size = 16
text = "teste"

[node name="DeleteTimer" type="Timer" parent="."]

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
